implementing virtualization specific (openvz/lxc) functionality

--- a/example-pbi-admin.cfg
+++ b/example-pbi-admin.cfg
@@ -1,3 +1,7 @@
 vz_iface=eth1
 base_image=/storage/nfs/shared/vm/images/debian-8-base.tar
 node_storage=nodes
+# openvz or lxc
+virtualization_type=openvz
+# ip or mac
+network_type=ip
